<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.asciidoctor</groupId>
	<artifactId>test</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<description>Integration Test: generate Javadoc for class and method</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<source>17</source>
					<additionalJOptions>
						<additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
						<additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
						<additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
						<additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
						<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
						<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
						<additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
					</additionalJOptions>
					<doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
					<docletArtifacts>
						<docletArtifact>
							<groupId>org.asciidoctor</groupId>
							<artifactId>asciidoclet</artifactId>
							<version>@project.version@</version>
						</docletArtifact>
					</docletArtifacts>
					<overview>src/main/java/overview.adoc</overview>
					<additionalOptions>
						--base-dir ${project.basedir}
						--attribute "project_name=${project.name}"
						--attribute "project_description=${project.description}"
					</additionalOptions>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
